--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "backend-coldplay",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1"
-  }
+    "mongoose": "^8.1.1",
+    "nodemon": "^3.0.3"
+  },
+  "description": ""
 }
