--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       { "src": "/auth/register", "dest": "app.js" },
       { "src": "/auth/login", "dest": "app.js" },
-      { "src": "/(.*)", "dest": "app.js" }
+      { "dest": "app.js" }
     ]
   }
   
