--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
       {
-        "src": "app.js",
-        "use": "@vercel/node"
+          "src": "app.js",
+          "use": "@now/node"
       }
-    ],
-    "routes": [
-      { "src": "/auth/register", "dest": "app.js" },
-      { "src": "/auth/login", "dest": "app.js" },
-      { "dest": "app.js" }
-    ]
-  }
+  ],
+  "routes": [
+      {
+          "src": "/(.*)",
+          "dest": "app.js"
+      }
+  ]
+}
   
