--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
 {
   "version": 2,
   "builds": [
-      {
-          "src": "app.js",
-          "use": "@now/node"
-      }
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "app.js"
-      }
+    { "src": "/auth/register", "dest": "app.js" },
+    { "src": "/auth/login", "dest": "app.js" },
+    { "src": "/(.*)", "dest": "app.js" } 
   ]
 }
+
   
